Changing index page in 1.9

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -29,12 +29,14 @@ Once the Windows cell is running, developers can specify a Windows stack when pu
 	<p class="note"><strong>Note</strong>: The procedures in Building a Windows Stemcell are only required for vSphere deployments. If you are using Amazon Web Services (AWS), skip this topic and proceed directly to <a href="deploy-windows.html">Deploying the BOSH Release for Windows</a>.</p>
 </p>
 * <a href="./deploy-windows.html" class="subnav">Deploying PCF Runtime for Windows</a>
-
-* <a href="/windows/msi-crossgrade.html">Migrating from Diego Windows</a>
+* <a href="./msi-crossgrade.html" class="subnav">Migrating from Diego Windows</a>
 
 ## <a id="managing"></a>Managing Windows Cells
 
 * <a href="./upgrade-windows.html" class="subnav">Upgrading Windows Cells</a>
+	<p class="note"><strong>Note</strong>:  For customers who are using the BOSH Release for Windows, there is no migration path. To upgrade, those customers must destroy their deployment of Windows cells with the BOSH CLI and then do a fresh install of the Windows tile.</p>
+
+	<p class="note"><strong>Note</strong>: For customers who are using Diego Windows (in either PCF 1.7 or 1.8), follow the procedures in the [Migrating from Diego Windows](msi-crossgrade.html.md.erb) topic to upgrade the Windows tile.</p>
 
 * <a href="./windows-rotate-creds.html" class="subnav">Rotating Credentials in Garden Windows</a>
 
