--- a/docs-content/upgrade-windows.html.md.erb
+++ b/docs-content/upgrade-windows.html.md.erb
@@ -11,7 +11,7 @@ This topic describes how to upgrade the PCF Runtime for Windows tile and update 
 
 ##<a id='upgrade-tile'></a> Upgrade PCF Runtime for Windows
 
-<p class="note"><strong>Note</strong>: For customers who are using Diego Windows, follow the procedures in the <a href="msi-crossgrade.html">Migrating from Diego Windows</a> topic to upgrade the Windows tile.</p>
+<p class="note"><strong>Note</strong>: For customers who are using Diego Windows, follow the procedures in the <a href="msi-crossgrade.html">Migrating from Diego Windows</a> topic to migrate your apps to Windows cells deployed by the tile.</p>
 
 The latest versions of your existing products will appear in your **Installation Dashboard**. Upgrade your product to the latest version by following these instructions.
 
