Editing note for requirements

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -15,6 +15,11 @@ Deploying this tile creates a separate BOSH deployment populated with the Garden
 
 Once the Windows cell is running, developers can specify a Windows stack when pushing .NET apps from the command line. PCF passes the app to the Windows cell in the Garden Windows BOSH deployment. The diagram below illustrates the process.
 
+	<p class="note"><strong>Note</strong>: The recommended resource requirements for this upgrade are as follows:
+	- Disk size : 64 GB
+	- Memory: 16 GB
+	- CPUs: 4  </p>
+
 <%= image_tag('windows-overview.png') %>
 
 ## <a id='understand'></a>Understanding PCF Runtime for Windows ##
