update upgrade topic

--- a/docs-content/upgrade-windows.html.md.erb
+++ b/docs-content/upgrade-windows.html.md.erb
@@ -7,13 +7,14 @@ owner: Greenhouse
 
 This topic describes how to upgrade the PCF Runtime for Windows tile and update the Windows stemcell.
 
-<p class="note"><strong>Note</strong>: For customers who are using the BOSH Release for Windows, there is no migration path. To upgrade, those customers must destroy their deployment of Windows cells with the BOSH CLI and then do a fresh install of the PCF Runtime for Windows tile.</p>
+If you are currently using Windows cells deployed by the BOSH Release for Windows or Diego Windows, consult the list below:
+
+* For customers who are using the BOSH Release for Windows, there is no migration path. To upgrade, you must destroy your deployment of Windows cells with the BOSH CLI and then perform a fresh install of the PCF Runtime for Windows tile.
+* For customers who are using Diego Windows, follow the procedures in the <a href="msi-crossgrade.html">Migrating from Diego Windows</a> topic to migrate your applications to Windows cells deployed by the tile.
 
 ##<a id='upgrade-tile'></a> Upgrade PCF Runtime for Windows
 
-<p class="note"><strong>Note</strong>: For customers who are using Diego Windows, follow the procedures in the <a href="msi-crossgrade.html">Migrating from Diego Windows</a> topic to migrate your apps to Windows cells deployed by the tile.</p>
-
-The latest versions of your existing products will appear in your **Installation Dashboard**. Upgrade your product to the latest version by following these instructions.
+The latest versions of your existing products will appear in the Ops Manager Installation Dashboard. Upgrade your product to the latest version by following these instructions.
 
 1. Navigate to the Ops Manager Installation Dashboard.
 
@@ -40,10 +41,10 @@ The latest versions of your existing products will appear in your **Installation
 
 1. Click **Import Stemcell**.
 
-1. Select the previously acquired Stemcell and click **Open**.
+1. Select the previously acquired stemcell and click **Open**.
 
 1. Click **Installation Dashboard** to navigate back to the Ops Manager Installation Dashboard. 
 
-1. Click *Apply Changes**.
+1. Click **Apply Changes**.
 
 
