add info on rotating creds[#140081285]

--- a/docs-book/master_middleman/source/subnavs/windows_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/windows_subnav.erb
@@ -13,6 +13,14 @@
       </li>
 
       <li>
+        <a href="/windows/windows-security.html">Understanding Stemcell Security</a>
+      </li>
+
+      <li>
+        <a href="/windows/build-stemcell.html">Building a Windows Stemcell</a>
+      </li>
+
+      <li>
         <a href="/windows/deploy-windows.html">Deploying PCF Runtime for Windows</a>
       </li>
 
@@ -21,15 +29,7 @@
       </li>
 
       <li>
-        <a href="/windows/build-stemcell.html">Building a Windows Stemcell</a>
-      </li>
-
-      <li>
         <a href="/windows/upgrade-windows.html">Upgrading Windows Cells</a>
-      </li>
-
-      <li>
-        <a href="/windows/windows-rotate-creds.html">Rotating Credentials in Garden Windows</a>
       </li>
 
       <li>
@@ -39,7 +39,6 @@
       <li>
         <a href="/windows/push-windows-apps.html">Deploying .NET Apps to Windows Cells</a>
       </li>
-
 
     </ul>
   </div>
