--- a/docs-book/output/master_middleman/source/subnavs/windows_subnav.erb
+++ b/docs-book/output/master_middleman/source/subnavs/windows_subnav.erb
@@ -17,15 +17,15 @@
       </li>
 
       <li>
+        <a href="/windows/msi-crossgrade.html">Migrating from Diego Windows</a>
+      </li>
+
+      <li>
         <a href="/windows/build-stemcell.html">Building a Windows Stemcell</a>
       </li>
 
       <li>
         <a href="/windows/upgrade-windows.html">Upgrading Windows Cells</a>
-      </li>
-
-      <li>
-        <a href="/windows/windows-rotate-creds.html">Rotating Credentials in Garden Windows</a>
       </li>
 
       <li>
