Adding resource requirements [#140585215]

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -22,6 +22,14 @@ Once the Windows cell is running, developers can specify a Windows stack when pu
 
 <%= image_tag('windows-overview.png') %>
 
+## <a id='requirements'></a> Requirements
+
+The recommended resource requirements for each Windows cell deployed by PCF Runtime for Windows are as follows:
+
+- Disk size: 64 GB
+- Memory: 16 GB
+- CPUs: 4  
+
 ## <a id='understand'></a>Understanding PCF Runtime for Windows ##
 
 * <a href="understand-windows.html" class="subnav">Understanding Windows Cells</a>
