--- a/docs-book/output/master_middleman/source/subnavs/windows_subnav.erb
+++ b/docs-book/output/master_middleman/source/subnavs/windows_subnav.erb
@@ -13,15 +13,19 @@
       </li>
 
       <li>
+        <a href="/windows/windows-security.html">Understanding Stemcell Security</a>
+      </li>
+
+      <li>
+        <a href="/windows/build-stemcell.html">Building a Windows Stemcell</a>
+      </li>
+
+      <li>
         <a href="/windows/deploy-windows.html">Deploying PCF Runtime for Windows</a>
       </li>
 
       <li>
         <a href="/windows/msi-crossgrade.html">Migrating from Diego Windows</a>
-      </li>
-
-      <li>
-        <a href="/windows/build-stemcell.html">Building a Windows Stemcell</a>
       </li>
 
       <li>
@@ -35,7 +39,6 @@
       <li>
         <a href="/windows/push-windows-apps.html">Deploying .NET Apps to Windows Cells</a>
       </li>
-
 
     </ul>
   </div>
