Editing for style and content[#138545959]

--- a/docs-content/push-windows-apps.html.md.erb
+++ b/docs-content/push-windows-apps.html.md.erb
@@ -32,7 +32,7 @@ Perform the following steps to push a .NET app to a Windows cell:
 		<pre class="terminal">$ cf push APP-NAME -s windows2012R2 -b hwc_buildpack</pre>
 
 	By passing `windows2012R2` with the `-s` flag, you instruct PCF to run the app in the Windows cell.
-	If you are not pushing your app from its directory, add the -p flag to specify the path to the directory that contains the app. 
+	If you are not pushing your app from its directory, add the `-p` flag to specify the path to the directory that contains the app. 
 
 1. Wait for your app to stage and start. If an error occurs, see the [Troubleshoot App Errors](#troubleshoot) section.
 
