--- a/docs-content/push-windows-apps.html.md.erb
+++ b/docs-content/push-windows-apps.html.md.erb
@@ -1,4 +1,4 @@
----
+ ---
 title: Deploying .NET Apps to Windows Cells 
 owner: Greenhouse
 ---
@@ -13,7 +13,7 @@ After operators have installed and configured the Pivotal Cloud Foundry (PCF) Ru
 
 Operators must also install the Cloud Foundry Command Line Interface (CLI) in order to perform the forthcoming cf push commands. For documentation on installing the Cloud Foundry CLI, see [Installing the cf CLI](https://docs.cloudfoundry.org/cf-cli/install-go-cli.html).
 
-If you have upgraded to PCF Runtime for Windows 1.10 and have apps that you want to migrate, see [Upgrading Windows Windows Cells](http://docs.pivotal.io/pivotalcf/windows/index.html#upgrade-apps).
+If you have upgraded to PCF Runtime for Windows 1.10 and have apps that you want to migrate, see [Upgrading Windows Cells](http://docs.pivotal.io/pivotalcf/windows/index.html#upgrade-apps).
 
 
 ##<a id='push'></a> Push a .NET App
