--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -43,7 +43,7 @@ There are two settings in the Elastic Runtime tile that affect the Windows cells
 	<%= image_tag('pcf-windows-tile-stemcell.png') %>
 
 1. Retrieve the stemcell by following the steps below for your IaaS.
-    * For vSphere, you must build your own stemcell. See the [Building a Windows Stemcell](build-stemcell.html) topic for more information.
+    * For vSphere, you must build your own stemcell.
     * For AWS, navigate to the **Stemcells for PCF (Windows Server)** section of [Pivotal Network](https://network.pivotal.io/products/stemcells-windows-server).
     * For GCP and Azure, stemcells will be available soon on Pivotal Network.
 
