[Adding ugrading windows cells back to the index, removing build-stemcell page #141513877]

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -38,13 +38,12 @@ The recommended resource requirements for each Windows cell deployed by PCF Runt
 
 ## <a id='install'></a>Installing PCF Runtime for Windows ##
 
-* <a href="./build-stemcell.html" class="subnav">Building a Windows Stemcell</a>
-	<p class="note"><strong>Note</strong>: The procedures in Building a Windows Stemcell are only required for vSphere deployments. If you are using a different IaaS, skip this topic and proceed directly to <a href="deploy-windows.html">Deploying PCF Runtime for Windows</a>.</p>
-</p>
 * <a href="./deploy-windows.html" class="subnav">Deploying PCF Runtime for Windows</a>
 * <a href="./msi-crossgrade.html" class="subnav">Migrating from Diego Windows</a>
 
 ## <a id="managing"></a>Managing Windows Cells
+
+* <a href="./upgrade-windows.html" class="subnav">Upgrading Windows Cells</a>
 
 * <a href="./windows-troubleshooting.html" class="subnav">Troubleshooting Windows Cells</a>
 
