--- a/docs-content/push-windows-apps.html.md.erb
+++ b/docs-content/push-windows-apps.html.md.erb
@@ -7,7 +7,7 @@ owner: Greenhouse
 
 This topic describes how to push .NET apps to Windows cells. 
 
-After operators have installed and configured the Pivotal Cloud Foundry (PCF) Runtime for Windows v1.9 tile, developers can push .NET apps to the Windows cell. For more information on installing the PCF Runtime for Windows v1.9 tile, see [Deploying PCF Runtime for Windows](deploy-windows.html.md.erb).
+After operators have installed and configured the Pivotal Cloud Foundry (PCF) Runtime for Windows v1.9 tile, developers can push .NET apps to the Windows cell. For more information on installing the PCF Runtime for Windows v1.9 tile, see [Deploying PCF Runtime for Windows](deploy-windows.html).
 
 Developers can push both [OWIN](http://owin.org/) and non-OWIN apps, and can push apps that are served by [Hostable Web Core](#push) or [self-hosted](#self-hosted). 
 
