--- a/docs-content/upgrade-windows.html.md.erb
+++ b/docs-content/upgrade-windows.html.md.erb
@@ -30,10 +30,7 @@ The latest versions of your existing products will appear in the Ops Manager Ins
 
 1. Navigate to the Ops Manager Installation Dashboard.
 
-1. Retrieve the stemcell by following the steps below for your IaaS.
-    * For vSphere, you must build your own stemcell.
-    * For AWS, navigate to the **Stemcells for PCF (Windows Server)** section of [Pivotal Network](https://network.pivotal.io/products/stemcells-windows-server).
-    * For GCP and Azure, stemcells will be available soon on Pivotal Network.
+1. Build your own vSphere stemcell. For additional help, contact [Pivotal Support](https://support.pivotal.io/).
 
 1. Click the **PCF Runtime for Windows** tile. 
 
